made the nav bar

--- a/MiniWebsite/mini-website/src/components/Navbar.css
+++ b/MiniWebsite/mini-website/src/components/Navbar.css
@@ -2,24 +2,27 @@
     display: flex;
     align-content: center;
     justify-content: center;
-    font-family: 'Courier New', Courier, monospace;
-    background-color: white
-
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background-color: rgb(21, 24, 91);
+    border-radius: 5px;
 }
 
 .navbar-container{
     display: flex;
     text-align: center;
-
+    
 }
 
 .nav-menu {
     list-style: none;
     text-decoration: none;
-    display: flex;
-    align-items: center;
-    justify-items: center;
-}
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    grid-gap: 10px;
+    width: 60vw;
+    justify-content: end;
+    margin-right: 2rem;
+}    
 
 .nav-item{
     list-style: none;
@@ -31,5 +34,5 @@
 
 .nav-links{
     text-decoration: none;
-    color: black;
+    color: white;
 }
