--- a/MiniWebsite/mini-website/src/components/Navbar.css
+++ b/MiniWebsite/mini-website/src/components/Navbar.css
@@ -29,10 +29,17 @@
     display: flex;
     align-items: center;
     margin-left: 2rem;
-    font-size: 1rem;
+    font-size: 1.5rem;
+
 }
+
+
 
 .nav-links{
     text-decoration: none;
     color: white;
+}
+
+.nav-links:hover {
+    color: grey;
 }
