--- a/MiniWebsite/mini-website/src/components/Navbar.css
+++ b/MiniWebsite/mini-website/src/components/Navbar.css
@@ -4,7 +4,10 @@
     justify-content: center;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: rgb(21, 24, 91);
+    width: 100%;
+    height: 80px;
     border-radius: 5px;
+    position: sticky;
 }
 
 .navbar-container{
