--- a/MiniWebsite/mini-website/src/App.css
+++ b/MiniWebsite/mini-website/src/App.css
@@ -1,8 +1,25 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
 .home,
-.about{
+.about,
+.cambridge{
     display: flex;
     height: 90vh;
     align-items: center;
     justify-content: center;
     font-size: 3rem;
+}
+
+.cambridge {
+    background-image: url('../public/images/JesusGreen.jpeg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    color: white;
+    font-size: 100px;
 }
