--- a/MiniWebsite/mini-website/src/components/Cards.css
+++ b/MiniWebsite/mini-website/src/components/Cards.css
@@ -1,7 +1,7 @@
 .cards {
     padding: 4rem;
     background: white;
-    height: 95vh;
+    height: 100vh;
 }
 h1 {
     text-align: center;
@@ -20,12 +20,14 @@ h1 {
     margin: 50px 0 45px;
 }
 .cards-items {
-    margin-bottom: 24px;
+    margin: 24px;
+    display: flex;
 }
+
 
 .cards-item {
     display: flex;
-    flex: 1;
+    flex: 1 1 0;
     margin: 0 1rem;
     border-radius: 10px;
 }
@@ -88,6 +90,7 @@ h1 {
 
 .cards-item-info {
     padding: 20px 30px 30px;
+    block-size: auto;
 }
 
 .cards-item-text {
