--- a/MiniWebsite/mini-website/src/components/Navbar.css
+++ b/MiniWebsite/mini-website/src/components/Navbar.css
@@ -6,7 +6,7 @@
     background-color: rgb(21, 24, 91);
     width: 100%;
     height: 80px;
-    border-radius: 5px;
+    border-radius: 0;
     position: sticky;
 }
 
@@ -41,6 +41,11 @@
 .nav-links{
     text-decoration: none;
     color: white;
+    text-align: center;
+    justify-items: center;
+}
+.nav-links h1{
+    margin-top: 20px;
 }
 
 .nav-links:hover {
