--- a/MiniWebsite/mini-website/src/App.css
+++ b/MiniWebsite/mini-website/src/App.css
@@ -21,14 +21,16 @@
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    background-color: black;
     color: white;
     font-size: 100px;
 }
 .Chester {
     background-image: url('../public/images/Chester-1.jpeg');
     background-position: center;
-    background-size: stretch;
+    background-size: cover;
     background-repeat: no-repeat;
+    background-color: black;
     color: white;
     font-size: 100px;
 }
