--- a/MiniWebsite/mini-website/src/components/Cards.css
+++ b/MiniWebsite/mini-website/src/components/Cards.css
@@ -13,6 +13,7 @@ h1 {
     max-width: 1120px;
     width: 90%;
     margin: 0 auto;
+
 }
 
 .cards-wrapper{
@@ -30,6 +31,7 @@ h1 {
     flex: 1 1 0;
     margin: 0 1rem;
     border-radius: 10px;
+    block-size: 21rem;
 }
 
 .cards-item-link{
@@ -54,19 +56,6 @@ h1 {
     animation-name: fade-img;
     animation-duration: 2s;
 }
-.cards-item-pic-wrap ::after{
-    content: attr(data-category);
-    position: absolute;
-    bottom: 0;
-    margin-left: 10px;
-    padding: 6px 8px;
-    max-width: calc((100%)-60px);
-    font-size: 12px;
-    font-weight: 700;
-    color: white;
-    background-color: #1f98f4;
-    box-sizing: border-box;
-}
 
 .cards-item-img{
     position: absolute;
@@ -74,18 +63,20 @@ h1 {
     right: 0;
     bottom: 0;
     left:  0;
+    margin-top: 20px;
     display: block;
     justify-content: center;
     width: 100%;
     max-width: 100%;
     height: 100%;
     max-height: 100%;
-    object-fit: cover;
+    object-fit: contain;
+    block-size: auto;
     transition: all 0.2 linear;
     
 }
 .cards-item-img:hover{
-    transform: scale(1.1);
+    transform: scale(1.01);
 }
 
 .cards-item-info {
