--- a/MiniWebsite/mini-website/src/App.css
+++ b/MiniWebsite/mini-website/src/App.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     font-family: Georgia, 'Times New Roman', Times, serif;
+    scroll-behavior: smooth;
 }
 
 .home,
@@ -25,6 +26,10 @@
     color: white;
     font-size: 100px;
 }
+.cambridge > img {
+    transition: 2s ease all;
+}
+
 .Chester {
     background-image: url('../public/images/Chester-1.jpeg');
     background-position: center;
