--- a/SplitScreen/SplitScreen.css
+++ b/SplitScreen/SplitScreen.css
@@ -1,6 +1,8 @@
 .leftSide , .rightSide {
     height: 50vh;
     width: 100%;
+    text-align: center;
+
 }
 
 @media screen and (min-width: 768px){
@@ -9,8 +11,18 @@
     }
 }
 
+.mainText {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+}
+
 .leftSide {
     background-color: rgb(213, 229, 165);
+    
 }
 
 .rightSide {
