--- a/card-flip/src/App.css
+++ b/card-flip/src/App.css
@@ -1,7 +1,14 @@
+* {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+}
+
 .App {
-display: flex;
+
 justify-content: center;
 align-items: center;
 display: flex;
 flex-direction: column;
+background-color: rgb(122, 122, 240);
 }
