--- a/web-layout-components/src/Components/HeroPage/HeroPage.css
+++ b/web-layout-components/src/Components/HeroPage/HeroPage.css
@@ -1,18 +1,32 @@
-.heroContainer {
-    display: flex;
-    flex-direction: column;
-    background-color: #679b81;
-    height: 35vh;
-    width: 100vw;
-    z-index: -1;
-    object-fit: contain;
-    align-items: center;
-}
-img {
+.hero-image {
     object-fit: cover;
     width: 100%;
     height: 100%;
+    opacity: 1;
+    position: fixed;
+    z-index: -1;
 }
-.imageContainer {
+.hero-container {
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
+    box-shadow: inset 0 0 0 1000px black (0, 0, 0, 0.2);
+    object-fit: contain;
+}
+.hero-container > h1 {
+    color: white;
+    font-size: 50px;
+    margin-top: -100px;
+    margin-right: 600px;
+}
+
+.hero-container > p {
+    color: white;
+    font-size: 32px;
+    margin-top: 8px;
+    width: 80vw;
+    font-family: 'Times New Roman', Times, serif;
 }
