--- a/web-layout-components/src/Components/HeroPage/HeroPage.css
+++ b/web-layout-components/src/Components/HeroPage/HeroPage.css
@@ -20,7 +20,8 @@
     color: white;
     font-size: 50px;
     margin-top: -100px;
-    margin-right: 600px;
+    margin-right: 0;
+    padding: 0px 30px;
 }
 
 .hero-container > p {
