--- a/web-layout-components/src/Components/ContentPage/WholePictureSingleText.css
+++ b/web-layout-components/src/Components/ContentPage/WholePictureSingleText.css
@@ -11,16 +11,17 @@
     background-color: #f6D110;
     width: 100%;
     max-height: 95vh;
-    
 }
 
 .whole-picture-single-text-box h1{
     color: #fff9c7;
     font-size: 100px;
+    padding-left: 30px;
 }
 .whole-picture-single-text-box h2{
     color: #fff9c7;
     font-size: 50px;
+    padding-left: 30px;
 }
 
 .whole-picture-single-text > img {
@@ -35,4 +36,5 @@
     border: 4px solid #ffffff;
     border-radius: 10px;
     box-shadow: 5px 5px 1px black;
+    margin-left: 30px;
 }
