--- a/MiniWebsite/mini-website/src/components/Navbar.css
+++ b/MiniWebsite/mini-website/src/components/Navbar.css
@@ -8,12 +8,13 @@
     height: 80px;
     border-radius: 0;
     position: sticky;
+    margin: 0px;
 }
 
 .navbar-container{
     display: flex;
     text-align: center;
-    
+    justify-content: center;
 }
 
 .nav-menu {
@@ -25,6 +26,7 @@
     width: 60vw;
     justify-content: end;
     margin-right: 2rem;
+    margin-bottom: 0;
 }    
 
 .nav-item{
@@ -33,7 +35,7 @@
     align-items: center;
     margin-left: 2rem;
     font-size: 1.5rem;
-
+ 
 }
 
 
@@ -43,9 +45,10 @@
     color: white;
     text-align: center;
     justify-items: center;
+    padding-left: 30px;
 }
 .nav-links h1{
-    margin-top: 20px;
+    margin: 0rem;
 }
 
 .nav-links:hover {
